# GeneSys-AI

./: .gitignore  BLAST_API.py  CONTRIBUTING.md  Charlie-TODO.md  DEVELOPING.md  DNAToolKit.py  OLD_README.md  README.md  TODO.md  ai.py  aligned_sequences.fasta  app.py  fasta_2_string.py  interface.py  main.py  playground.py  pyproject.toml  requirements.txt  tabular_mods.py  tempCodeRunnerFile.py  test.py  test.txt
Visualization/: README.md  main.py  mol_app.py  ngl_app.py  ngll.ipynb
cache/: cache_db.db  cache_db.db.wal
data/FASTA_files/: sequence.fasta
genesys/: DNAToolKit.py  ai.py  client.py  env.py  eventcreator.py  hashed_pw.pkl  interface.py  openai.py  protein_render.py  utils.py  visuals.py
genesys/assistants/: __init__.py  analysis.py  base.py  ra.py  research.py
genesys/tools/: dna.py  pubmed.py  sequence.py
pages/: analysis.py  manuscript.py  research.py
rosalind_problems/: Calculating_Protein_Mass.py  Counting_DNA_Nucleotides.py  Counting_Point_Mutations.py  GC_Content.py  ReverseComplement.py  Transcription.py  Translation.py  rosalind_dna.txt  rosalind_gc.txt  rosalind_hamm.txt  rosalind_prot.txt  rosalind_prtm.txt  rosalind_revc.txt  rosalind_rna.txt
tests/: test_ai.py  test_app.py  test_toolkit.py  test_utils.py
tests/assistants/: test_base.py  test_bioinformatician.py  test_research.py
tests/fixtures/: covid_msa.fasta  data_generator.py  invalid.fasta  msa.FASTA  primer.fasta  rand_gen.fasta  rand_rna.fasta  sequence.fasta
tests/tools/: test_pubmed.py
