[tool.poetry]
name = "genesys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandasai = "^1.2.8"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
biopython = "^1.81"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
