[tool.poetry]
name = "genesys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandasai = "^1.2.8"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
biopython = "^1.81"
python-dotenv = "^1.0.0"
streamlit = "^1.27.1"
beautifulsoup4 = "^4.12.2"
stmol = "^0.0.9"
ipython-genutils = "^0.2.0"
httpx = "^0.25.0"
streamlit-authenticator = "0.1.5"
primer3-py = "^2.0.1"
typing-extensions = "^4.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
